[gd_scene load_steps=6 format=3 uid="uid://c0s52eg71p6o6"]

[ext_resource type="Script" path="res://components/ui/upgrade_gui.gd" id="1_m66yx"]
[ext_resource type="Texture2D" uid="uid://dnaw5gmguv3uc" path="res://assets/temp icons/sword.jpg" id="1_px63o"]
[ext_resource type="Texture2D" uid="uid://cnm7363ppsiqq" path="res://assets/temp icons/garlic.jpg" id="2_q5bnq"]
[ext_resource type="Texture2D" uid="uid://bunworg1uorpu" path="res://assets/temp icons/bible.png" id="3_1wsy3"]
[ext_resource type="Texture2D" uid="uid://b3bhqx7hqs1k2" path="res://assets/temp icons/whip.png" id="4_ye3rq"]

[node name="UpgradeGUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_m66yx")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -99.5
offset_right = 329.0
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 27.0
offset_right = 991.0
offset_bottom = 1007.0
scale = Vector2(0.155, 0.155)
texture_normal = ExtResource("1_px63o")

[node name="TextureButton2" type="TextureButton" parent="Panel"]
clip_contents = true
layout_mode = 0
offset_left = 170.0
offset_top = 27.0
offset_right = 1670.0
offset_bottom = 1027.0
scale = Vector2(0.11, 0.15)
texture_normal = ExtResource("2_q5bnq")

[node name="TextureButton3" type="TextureButton" parent="Panel"]
layout_mode = 1
offset_left = 335.0
offset_top = 25.0
offset_right = 847.0
offset_bottom = 537.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("3_1wsy3")

[node name="TextureButton4" type="TextureButton" parent="Panel"]
layout_mode = 1
offset_left = 488.0
offset_top = 17.0
offset_right = 1000.0
offset_bottom = 529.0
scale = Vector2(0.315, 0.315)
texture_normal = ExtResource("4_ye3rq")

[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Panel/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="Panel/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="Panel/TextureButton4" to="." method="_on_texture_button_4_pressed"]
